setup cost for medical services

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.FacilitySearchResultsActivity" />
+        <activity android:name=".view.MedicalServicesCostActivity" />
         <activity android:name=".view.MainActivity" />
     </application>
 
